# DjangoHW

./: .env.sample  README.md  catalog_fixture.json  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_blogpost_delete_blog.py  0003_blog_delete_blogpost.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_contact.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: blog_tags.py
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_created_at_alter_product_image_and_more.py
catalog/src/: contacts.html  home.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username_alter_customuser_email.py
users/templates/users/: logged_out.html  login.html  register.html
