[tool.poetry]
name = "djangohw"
version = "0.1.0"
description = ""
authors = ["Yuliya Kuznetsova <juliakuznetsova001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
